# deeb

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  test.json
benches/: deeb_bench.rs
deeb/: Cargo.toml  README.md  _meta.json  comment.json  user.json
deeb/db/: test_add_key.json()  test_add_key_nested.json()  test_delete_many.json()  test_delete_many_macro.json()  test_delete_one.json()  test_delete_one_macro.json()  test_drop_key.json()  test_drop_key_nested.json()  test_find_by_association.json()  test_find_many.json()  test_find_many_macro.json()  test_find_many_with_limit.json()  test_find_many_with_limit_and_skip.json()  test_find_many_with_ordering.json()  test_find_many_with_skip.json()  test_find_one.json()  test_find_one_macro.json()  test_insert_many.json()  test_insert_many_macro.json()  test_insert_one.json()  test_insert_one_macro.json()  test_load_meta.json()  test_transaction_macro.json()  test_transcation.json()  test_update_many.json()  test_update_many_macro.json()  test_update_one.json()  test_update_one_macro.json()
deeb/src/: deeb.rs  lib.rs
deeb/tests/: mod.rs
deeb_core/: Cargo.toml  README.md
deeb_core/src/: lib.rs
deeb_core/src/database/: database_instance.rs  find_many_options.rs  index.rs  index_constrant.rs  instance_name.rs  mod.rs  name.rs  query.rs  transaction.rs
deeb_core/src/entity/: mod.rs
deeb_macros/: Cargo.toml  README.md
deeb_macros/src/: lib.rs
deeb_server/: Cargo.toml  README.md  _meta.json  example-rules.rhai
deeb_server/src/: main.rs
deeb_server/src/api/: mod.rs
deeb_server/src/api/auth/: mod.rs
deeb_server/src/api/auth/login/: mod.rs
deeb_server/src/api/auth/me/: mod.rs
deeb_server/src/api/auth/register/: mod.rs
deeb_server/src/api/delete_many/: mod.rs
deeb_server/src/api/delete_one/: mod.rs
deeb_server/src/api/find_many/: mod.rs
deeb_server/src/api/find_one/: mod.rs
deeb_server/src/api/insert_many/: mod.rs
deeb_server/src/api/insert_one/: mod.rs
deeb_server/src/api/subscribe/: mod.rs
deeb_server/src/api/update_many/: mod.rs
deeb_server/src/api/update_one/: mod.rs
deeb_server/src/app_data/: mod.rs
deeb_server/src/auth/: mod.rs
deeb_server/src/auth/auth_user/: mod.rs
deeb_server/src/broker/: mod.rs
deeb_server/src/cli/: mod.rs
deeb_server/src/database/: mod.rs
deeb_server/src/environment/: mod.rs
deeb_server/src/rules/: mod.rs
deeb_server/src/rules/check_access/: mod.rs
deeb_server/src/rules/create_rules/: mod.rs
deeb_server/src/rules/load_rules/: mod.rs
deeb_server/src/rules/worker/: mod.rs
deeb_server/src/test_utils/: mod.rs
src/: cli.rs  deeb.rs  lib.rs  main.rs
src/database/: entity.rs  mod.rs  name.rs  query.rs  transaction.rs
tests/: mod.rs
