[package]
name = "deeb"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "An ACID compliant JSON database built with Rust"
homepage = "https://www.github.com/the-devoyage/deeb"
repository = "https://www.github.com/the-devoyage/deeb"

[lib]
name = "deeb"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.86"
uuid = { version= "1.8.0", features = ["v4"] }
log = "0.4.21"
env_logger = "0.11.3"
fs2 = "0.4.3"
