[package]
name = "deeb_core"
version = "0.0.2"
edition = "2024"
license = "MIT"
description = "Core library for an ACID compliant JSON embeddable database written in Rust."
homepage = "https://www.github.com/the-devoyage/deeb"
repository = "https://www.github.com/the-devoyage/deeb"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
anyhow = "1.0.86"
log = "0.4.21"
fs2 = "0.4.3"
uuid = { version= "1.8.0", features = ["v4"] }
