[package]
name = "deeb_macros"
version = "0.0.4"
edition = "2024"
license = "MIT"
description = "Macros for an ACID compliant JSON embeddable database written in Rust."
homepage = "https://www.github.com/the-devoyage/deeb"
repository = "https://www.github.com/the-devoyage/deeb"


[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"
deeb_core = {version = "0.0.5", path = "../deeb_core" }
anyhow = "1.0.86"
