[package]
name = "deeb_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
clap = { version = "4.5.40", features = ["derive"] }
deeb = { version = "0.0.11", path = "../deeb" }
log = "0.4.27"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
